--- a/front/src/app/components/maps/maps.component.html
+++ b/front/src/app/components/maps/maps.component.html
@@ -1,1 +1,4 @@
-<p>maps works!</p>
+<div class="content">
+    <div #map class="content_map"></div>
+    <div #routes class="content_routes"></div>
+</div>
