--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <app-header></app-header>
+    <app-header></app-header>
+    <app-maps></app-maps>
+    <app-modal></app-modal>
 </div>
